minor ui enhancements